lab2/root-service-2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-root-deploy-2
spec:
  selector:
    matchLabels:
      app: root-service-2
  replicas: 1
  template:
    metadata:
      labels:
        app: root-service-2
    spec:
      containers:
        - name: root-service-2
          image: root-service-2:0.1
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service-root-service-2
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: root-service-2
