lab2/root-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-root-deploy
spec:
  selector:
    matchLabels:
      app: root-service
  replicas: 1
  template:
    metadata:
      labels:
        app: root-service
    spec:
      containers:
        - name: root-service
          image: root-service:0.1
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service-root-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: root-service
