lab2/config.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-service-ingress
spec:
  rules:
    - http:
        paths:
          - path: /api/service1
            pathType: Prefix
            backend:
              service:
                name: service-1-service
                port:
                  number: 8080
          - path: /api/service2
            pathType: Prefix
            backend:
              service:
                name: service-2-service
                port:
                  number: 8080
          - path: /api/root-service
            pathType: Prefix
            backend:
              service:
                name: service-root-service
                port:
                  number: 8080
          - path: /api/root-service-2
            pathType: Prefix
            backend:
              service:
                name: service-root-service-2
                port:
                  number: 8080
