lab2/service2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-2-deploy
spec:
  selector:
    matchLabels:
      app: service-2
  replicas: 1
  template:
    metadata:
      labels:
        app: service-2
    spec:
      containers:
        - name: service-2
          image: service2:0.1
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service-2-service
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: service-2
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: service-2-virtual
spec:
  hosts:
    - service-2-service
  http:
    - route:
        - destination:
            host: service-2-service
      timeout: 5s
      retries:
        attempts: 3
        retryOn: 5xx
        perTryTimeout: 5s
